--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,12 +1,7 @@
-body {
-  margin-top: 80px;
-  overflow: hidden;
-}
-
 .title {
   width: 300px;
   position: absolute;
-  top: 30%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -102,10 +97,9 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-  margin-top: 80px;
   background: url("../../assets/img/rio-de-janeiro-night.jpg");
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
   background-attachment: fixed;
 }
 
@@ -120,7 +114,7 @@ body {
 
 .banner .clouds img {
   position: absolute;
-  bottom: 0;
+  bottom: -50px;
   max-width: 100%;
   animation: animate calc(8s * var(--i)) linear infinite;
 }
@@ -132,5 +126,11 @@ body {
 
   100% {
     transform: translateX(100%);
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .banner .clouds img {
+    bottom: 0;
   }
 }
