--- a/src/pages/Contatos/Contatos.module.css
+++ b/src/pages/Contatos/Contatos.module.css
@@ -92,6 +92,11 @@
   background-color: #1A91DA;
 }
 
+.side.telegram {
+  color: white;
+  background-color: #31A5D8;
+}
+
 .side.gmail {
   color: white;
   background-color: #D93025;
